# idos

./: .gitignore  .gitmodules  Cargo.toml  Makefile  readme.md  rust-toolchain.toml
.github/workflows/: docker.yml  prebuild.yml  test.yml
demo/: Cargo.toml
demo/methods/: Cargo.toml  build.rs
demo/methods/guest/: Cargo.toml
demo/methods/guest/src/: main.rs
demo/src/: main.rs
docs/: input.md  introduction.md  zkvm.md
idos-buildkit/cli/: Cargo.toml
idos-buildkit/cli/src/: commands.rs  lib.rs  main.rs
idos-buildkit/cli/src/commands/: config.rs  daemon.rs  project.rs
idos-buildkit/toolchain/: Cargo.toml
idos-buildkit/toolchain/src/: dependence.rs  lib.rs
idos-computa/: Cargo.toml  Makefile
idos-computa/examples/foo/: main.rs
idos-computa/src/: global.rs  lib.rs  prelude.rs
idos-computa/types/: Cargo.toml
idos-computa/types/src/: file.rs  lib.rs  path.rs  proof.rs  stream.rs
idos-datasource/: Cargo.toml
idos-datasource/src/: http.rs  kubo.rs  lib.rs
idos-datasource/src/http/: file.rs  global.rs  stream.rs
idos-runtime/: Cargo.toml  Makefile
idos-runtime/contracts/: .solhint.json  Cargo.toml  README.md  addresses.json  build.rs  foundry.toml  package.json  slither.config.json
idos-runtime/contracts/abi/: IDataverseRelayer.abi  IDataverseVerifier.abi
idos-runtime/contracts/contracts/client/: DataverseClient.sol  IDataverseClient.sol
idos-runtime/contracts/contracts/relayer/: DataverseRelayer.sol  IDataverseRelayer.sol
idos-runtime/contracts/contracts/token/: DataverseToken.sol
idos-runtime/contracts/contracts/token/ERC677/: ERC677Sender.sol  IERC677Receiver.sol
idos-runtime/contracts/contracts/verifier/: DataverseVerifier.sol  IDataverseVerifier.sol
idos-runtime/contracts/script/: 01_DeployDataverseToken.s.sol  02_DeployDataverseRelayer.s.sol  03_DeployDataverseVerifier.sol  04_SetDataverseVerifier.s.sol  05_AuthorizeSubmitter.s.sol  06_DeployDataverseClientMock.s.sol  07_ClientMockRequest.s.sol  08_GetClientMockValue.s.sol
idos-runtime/contracts/src/: config.rs  lib.rs
idos-runtime/contracts/test/: Extension.t.sol
idos-runtime/contracts/test/mocks/: DataverseClientMock.sol
idos-runtime/database/: Cargo.toml
idos-runtime/database/migrations/2024-01-31-040647_statistics/: down.sql  up.sql
idos-runtime/database/src/: lib.rs  models.rs  schema.rs
idos-runtime/src/: bonsai.rs  config.rs  error.rs  extension.rs  handlers.rs  lib.rs  main.rs  state.rs
idos-runtime/src/config/: datasource.rs
idos-runtime/src/extension/: contract.rs  default.rs
