[workspace]
resolver = "2"
members = [
  "idos-runtime/database",
  "idos-runtime/contracts",
  "idos-computa",
  "idos-computa/types",
  "idos-runtime",
  "idos-datasource",
  "demo",
  "idos-buildkit/toolchain",
  "idos-buildkit/cli",
]

[workspace.dependencies]
actix-web = "4.4.0"
anyhow = "1.0.80"
async-trait = "0.1.78"
bincode = "1.3.3"
bonsai-ethereum-relay = { version = "0.6.1" }
bonsai-sdk = { version = "0.7.0", features = ["async"] }
bytemuck = "1.14.1"
ceramic-core = { git = "https://github.com/3box/rust-ceramic.git", branch = "main" }
chrono = { version = "0.4.30", features = ["serde"] }
confy = "0.6.1"
database = { path = "./idos-runtime/database" }
dataverse-ceramic = { git = "https://github.com/dataverse-os/network-crates", branch = "main" }
dataverse-core = { git = "https://github.com/dataverse-os/network-crates", branch = "main" }
dataverse-file-system = { git = "https://github.com/dataverse-os/network-crates", branch = "main" }
dataverse-iroh-store = { git = "https://github.com/dataverse-os/network-crates", branch = "main" }
dataverse-pgsql-store = { git = "https://github.com/dataverse-os/network-crates", branch = "main" }
derive_builder = "0.20.0"
diesel = { version = "2.1.4", default-features = false, features = [
  "postgres",
  "chrono",
  "uuid",
  "r2d2",
  "serde_json",
] }
env_logger = "0.11.3"
ethers = { version = "2.0.11", features = ["rustls", "ws"] }
futures = "0.3.15"
hex = "0.4.3"
idos-computa = { path = "./idos-computa" }
idos-runtime = { path = "./idos-runtime" }
idos-contracts = { path = "./idos-runtime/contracts" }
idos-datasource = { path = "./idos-datasource" }
idos-types = { path = "./idos-computa/types" }
log = "0.4.20"
once_cell = "1.19.0"
r2d2 = "0.8.10"
reqwest = { version = "0.12.0", features = ["blocking", "json"] }
risc0-zkvm = "0.21.0"
serde = "1.0.197"
serde_json = "1.0.114"
serde_json_path = "0.6.5"
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.4.1", features = [
  "v4",
  "fast-rng",
  "macro-diagnostics",
  "serde",
] }

[patch.'https://github.com/ceramicnetwork/rust-ceramic']
ceramic-core = { git = "https://github.com/dataverse-os/rust-ceramic", branch = "patch-kubo-block-put" }
ceramic-event = { git = "https://github.com/dataverse-os/rust-ceramic", branch = "patch-kubo-block-put" }
ceramic-kubo-rpc-server = { git = "https://github.com/dataverse-os/rust-ceramic", branch = "patch-kubo-block-put" }

[patch.'https://github.com/3box/rust-ceramic']
ceramic-event = { git = "https://github.com/dataverse-os/rust-ceramic", branch = "patch-kubo-block-put" }

[patch.'https://github.com/3box/ceramic-http-client-rs']
ceramic-http-client = { git = "https://github.com/dataverse-os/ceramic-http-client-rs", branch = "patch-methods" }
