[package]
name = "idos-computa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "idos_computa"

[[example]]
name = "foo"

[dependencies]
anyhow = { workspace = true }
ethabi = "18.0.0"
idos-types = { workspace = true }
jsonptr = "0.4.6"
once_cell = "1.19.0"
primitive-types = { version = "0.12.2", features = ["serde"] }
risc0-zkvm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_json_path = { workspace = true }
