[package]
name = "idos-datasource"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "idos_datasource"

[dependencies]
anyhow = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
idos-computa = { workspace = true }
once_cell = { workspace = true }
async-trait = "0.1.78"
idos-types = { workspace = true }
dataverse-ceramic = { workspace = true }
dataverse-file-system = { workspace = true }
tracing = { workspace = true }
dataverse-pgsql-store.workspace = true
