[package]
name = "idos-runtime"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { workspace = true }
anyhow = { workspace = true }
bincode = { workspace = true }
bonsai-ethereum-relay = { workspace = true }
bonsai-sdk = { workspace = true }
bytemuck = { workspace = true }
ceramic-core = { workspace = true }
chrono = { workspace = true }
confy = { workspace = true }
database = { workspace = true }
dataverse-ceramic = { workspace = true }
dataverse-core = { workspace = true }
dataverse-file-system = { workspace = true }
dataverse-iroh-store = { workspace = true }
dataverse-pgsql-store = { workspace = true }
derive_builder = { workspace = true }
diesel = { workspace = true }
directories = "5.0.1"
ethabi = { version = "18.0.0", default-features = false }
ethers = { workspace = true }
ethers-contract = "2.0.11"
futures = { workspace = true }
hex = { workspace = true }
idos-contracts  = { workspace = true }
idos-datasource = { workspace = true }
lazy_static = "1.4.0"
log = { workspace = true }
r2d2 = { workspace = true }
reqwest = { workspace = true }
risc0-zkvm = { workspace = true }
rust-embed = { version = "8.3.0", features = ["include-exclude"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
