[package]
name = "idos-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
jsonptr = "0.4.7"
serde = { workspace = true }
serde_json = { workspace = true }
serde_json_path = { workspace = true }
