[package]
name = "idos-contracts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
ethers = { workspace = true, features = ["abigen", "ws"] }
anyhow = { workspace = true }
serde = { workspace = true }

[build-dependencies]
ethers = { workspace = true, features = ["abigen", "ws"] }
serde_json.workspace = true
